# streamlit-tag-input

./: README.md  pyproject.toml
examples/: app.py
streamlit_tag_input/: __init__.py
streamlit_tag_input/frontend/: index.html  package-lock.json  package.json
streamlit_tag_input/frontend/public/: index.html
streamlit_tag_input/frontend/src/: TagInput.tsx  index.tsx
